Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.4
-
None
-
Raspberry Pi3
-
-
f4744a77224009cb46a254614106b9034a84fd4f (qt/qtdeclarative/5.13)
Description
In OpenVG environment, it will not be drawn if repeated generation / destruction of AnimatedSprite. (In OpenGL and Direct3D backends cases, it can be continuously drawn)
If you run the attached application, it will not be drawn after repeating about 10 times
After inserting QOpenVGContext :: checkErrors () and checking the error status, the following is reported
eglError: "3000"
error: "1002"